# AI-super-dokugaku

./: .gitignore  .gitmodules  02_intermediate_idea-100-knock.json  03_kyoko_beginner_copilot-email-draft.json  06_kyoko_beginner_ai-english-conversation.json  100_tatsuya_advanced_dify-for-teams.json  10_advanced_find-life-purpose.json  10_kyoko_beginner_transcription.json  11_beginner_listen-to-books.json  11_kyoko_intermediate_prompt-design-4-steps.json  12_kyoko_intermediate_copilot-for-excel.json  13_beginner_youtube-to-text.json  13_kyoko_intermediate_gemini-in-sheets.json  16_advanced_ai-research-agent.json  17_intermediate_metaphor-creation.json  18_advanced_fact-opinion-separation.json  18_kyoko_intermediate_linkedin-profile.json  19_intermediate_feynman-technique.json  19_kyoko_intermediate_gemini-trip-planning.json  21_intermediate_custom-learning-roadmap.json  22_advanced_historical-simulation.json  23_intermediate_visualize-physics.json  24_kyoko_advanced_copilot-illustration.json  28_tatsuya_beginner_copilot-notebook.json  29_advanced_presentation-story.json  30_intermediate_catchcopy-persona.json  30_tatsuya_beginner_1on1-analysis.json  31_beginner_weakness-to-strength.json  31_tatsuya_beginner_personalized-news-report.json  32_intermediate_market-value-career.json  33_advanced_story-structure.json  33_tatsuya_beginner_analogy-generation.json  34_intermediate_blog-structure.json  34_tatsuya_beginner_academic-paper-summary.json  36_advanced_code-debug-refactor.json  36_tatsuya_intermediate_chain-of-thought.json  38_intermediate_business-plan-validation.json  (+120 more)
(+3260 files in other folders)
